apps/gitea-mirror/overlays/nishir-tailnet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gitea-mirror
spec:
  gatewayClassName: gitea-mirror
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: gitea-mirror-i-shikanime-studio-tls
            group: ""
            kind: Secret
