apps/gitea-mirror/overlays/nishir-tailnet/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-mirror-redirect
spec:
  hostnames:
    - gitea-mirror.i.shikanime.studio
  parentRefs:
    - name: gitea-mirror
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
