apps/gitea-mirror/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-mirror
spec:
  hostnames:
    - gitea-mirror.i.shikanime.studio
  parentRefs:
    - name: gitea-mirror
      sectionName: https
  rules:
    - backendRefs:
        - name: gitea-mirror
          port: http
